fix button cutoff when resizing

--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -98,7 +98,6 @@ button.compact {
     height: var(--size);
     width: var(--size);
     padding: 0 0 0 10px;
-    overflow: hidden;
     margin: 10px 0;
 }
 
@@ -117,7 +116,7 @@ button.compact {
 }
 
 .anno-button:hover .tool-icon {
-    transform: scale(1.3);
+    transform: scale(1.2);
 }
 
 .anno-button[selected="true"] {
